--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -504,8 +504,11 @@
 
 }
 
-.travel {
+.holder {
   background-image: url('../img/travel-bg.png');
+  &.sleep {
+    background-image: url('../img/frangipani.png');
+  }
   background-position: bottom right;
   background-repeat: no-repeat;
 
@@ -515,7 +518,7 @@
   }
 }
 
-.travel-slider {
+.holder-slider {
   &__head {
     background-repeat: no-repeat;
     background-position: top left;
@@ -527,14 +530,30 @@
     margin-top: -230px;
     background-repeat: no-repeat;
     background-position: right center;
+    background-size: contain;
     .descr__head{
       position: relative;
-      padding-right: 78px;
+      padding-right: 68px;
+      &.descr__head-sleep {
+        padding-right: 215px;
+      }
+      
       img {
         position: absolute;
         right: 0;
         top: 0;
       }
+
+      .holder__star-list {
+        position: absolute;
+        right: 0;
+        top: 0;
+
+        img {
+          position: static;
+        }
+      }
+
     }
   }
   &__subtitle {
@@ -546,18 +565,18 @@
   }
 }
 
-.travel-slider__info {
+.holder-slider__info {
   display: flex;
   justify-content: space-around;
 }
 
-.travel-slider__info-item {
+.holder-slider__info-item {
   min-height: 200px;
   margin-bottom: 66px;
   position: relative;
 }
 
-.travel-slider__info-subtitle {
+.holder-slider__info-subtitle {
   position: absolute;
   font-size: 18px;
   line-height: 22px;
@@ -572,14 +591,14 @@
   white-space: nowrap;
 }
 
-.travel-slider__info-title {
+.holder-slider__info-title {
   font-weight: 800;
   font-size: 40px;
   line-height: 36px;
   padding-left: 40px;
   position: relative;
 
-  span {
+  .holder-pricing__span {
     font-size: 14px;
     font-weight: 400;
     line-height: 0;
