--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -139,6 +139,32 @@
 
 }
 
+.menu-btn {
+  display: none;
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  position: absolute;
+  z-index: 20;
+  right: 20px;
+  top: 100px;
+  background-color: rgba(255, 255, 255, 0.1);
+  &__inner {
+    width: 40px;
+  }
+  &__line {
+    height: 3px;
+    margin-bottom: 5px;
+    background-color: $green;
+    + .menu-btn__line {
+      margin-top: 5px;
+    }
+  }
+}
+
 .header__date {
   font-weight: 800;
   font-size: 72px;
@@ -257,9 +283,11 @@
 }
 
 .surf-box {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  &__wrapper {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
   &__inner {
     min-height: 750px;
@@ -325,6 +353,7 @@
 
   .slick-list {
     min-height: 635px;
+    overflow: visible;
   }
 
   .slick-current {
@@ -401,6 +430,7 @@
   height: 23px;
   background-color: $green;
   border-radius: 50%;
+  box-shadow: 0px 0px 35px rgba(74, 246, 205, 0.837777);
 }
 
 .slider-dots__content {
@@ -419,7 +449,7 @@
     border-left: 12px solid transparent;
     border-right: 12px solid transparent;
     bottom: -21px;
-    left: 50%;
+    left: calc(50% - 1px);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
@@ -436,7 +466,7 @@
   .slider-dots__content {
     transform: translateX(0);
     &::before {
-      left: 0;
+      left: -0.5px;
     }
   }
 
@@ -498,7 +528,7 @@
     transform: translateX(-262px);
     &::before {
       left: auto;
-      right: 0;
+      right: -0.5px;
     }
   }
 
