--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -15,6 +15,8 @@ body {
   background-color: #171919;
   color: #fff;
   text-transform: uppercase;
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
 a {
@@ -81,12 +83,16 @@ li {
 
 .title {
 
-  span {
+  div {
     font-size: 200px;
     color: rgba(#fff, .02);
     font-weight: 800;
     position: relative;
     transform: translateX(-50px);
+    display: inline-block;
+  }
+
+  span {
     display: inline-block;
   }
 
