--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,11 +3,158 @@
 @import 'fonts';
 @import 'global';
 
+/* --------- Header --------- */
 .header {
   position: relative;
   height: 100vh;
 }
 
+.header__title {
+  font-weight: 800;
+  font-size: 200px;
+  line-height: 156px;
+  opacity: 0.07;
+  max-width: 467px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+}
+
+.header__arrows {
+  position: absolute;
+  left: 210px;
+  bottom: 30px;
+  z-index: 3;
+}
+
+// Header Map
+.header__map {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 3;
+}
+
+.line-animation {
+  stroke-dashoffset: 600;
+  stroke-dasharray: 600;
+  animation: animdash 3s infinite 6s
+}
+
+@keyframes animdash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+// Responsive Menu Btn
+.menu-btn {
+  display: none;
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  position: absolute;
+  z-index: 20;
+  right: 20px;
+  top: 100px;
+  background-color: rgba(255, 255, 255, 0.1);
+  &__inner {
+    width: 40px;
+  }
+  &__line {
+    height: 3px;
+    margin-bottom: 5px;
+    background-color: $green;
+    + .menu-btn__line {
+      margin-top: 5px;
+    }
+  }
+}
+
+// Header Aside
+.header__aside {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  border-right: 1px solid rgba(#fff, .25);
+  height: 100vh;
+  text-align: center;
+}
+
+.logo {
+  &__img {
+    height: 170px;
+  }
+}
+
+.menu {
+  padding-top: 15px;
+
+  a {
+    span {
+      display: block;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 14px;
+      letter-spacing: 3px;
+      padding-top: 6px;
+      margin-bottom: 20px;
+      text-transform: capitalize;
+    }
+  }
+
+}
+
+.header__search {
+  padding-top: 15px;
+  padding-bottom: 35px;
+}
+
+.header__date {
+  font-weight: 800;
+  font-size: 72px;
+  line-height: 64px;
+
+  span {
+    padding-top: 15px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 1.4px;
+    margin-bottom: 30px;
+    display: block;
+  }
+
+}
+
+.header__location {
+  display: inline-block;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 1.05px;
+  position: relative;
+  padding-left: 19px;
+  text-transform: uppercase;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 11px;
+    height: 13px;
+    background-image: url(../img/marker.svg);
+    left: 0;
+    top: 0;
+  }
+
+}
+
+// Header Slider
 .header__slider {
   &-item {
     height: 100vh;
@@ -29,10 +176,6 @@
   margin-bottom: 5px;
 }
 
-.slider-item__info-suptext {
-  margin-bottom: 8px;
-}
-
 .slider-item__info-title {
   font-weight: 800;
   font-size: 80px;
@@ -40,23 +183,15 @@
   margin-bottom: 48px;
 }
 
+.slider-item__info-suptext {
+  margin-bottom: 8px;
+}
+
 .slider-item__info-text {
   font-weight: 800;
   font-size: 40px;
   line-height: 46px;
   margin-bottom: 20px;
-}
-
-.slider-arrows {
-  position: absolute;
-  top: 40px;
-  right: 80px;
-  cursor: pointer;
-  z-index: 4;
-}
-
-.slider-arrows__left {
-  right: 125px;
 }
 
 .slider-dotshead {
@@ -97,144 +232,19 @@
 
 }
 
-.header__aside {
+.slider-arrows {
   position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  border-right: 1px solid rgba(#fff, .25);
-  height: 100vh;
-  text-align: center;
-}
-
-.header__title {
-  font-weight: 800;
-  font-size: 200px;
-  line-height: 156px;
-  opacity: 0.07;
-  max-width: 467px;
-  position: absolute;
-  top: 0;
-  left: 0;
+  top: 40px;
+  right: 80px;
+  cursor: pointer;
   z-index: 4;
 }
 
-.menu {
-  padding-top: 40px;
-
-  a {
-
-    span {
-      display: block;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 14px;
-      letter-spacing: 3px;
-      padding-top: 6px;
-      margin-bottom: 20px;
-      text-transform: capitalize;
-    }
-
-  }
-
+.slider-arrows__left {
+  right: 125px;
 }
 
-.menu-btn {
-  display: none;
-  width: 60px;
-  height: 60px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  border: 1px solid #fff;
-  position: absolute;
-  z-index: 20;
-  right: 20px;
-  top: 100px;
-  background-color: rgba(255, 255, 255, 0.1);
-  &__inner {
-    width: 40px;
-  }
-  &__line {
-    height: 3px;
-    margin-bottom: 5px;
-    background-color: $green;
-    + .menu-btn__line {
-      margin-top: 5px;
-    }
-  }
-}
-
-.header__date {
-  font-weight: 800;
-  font-size: 72px;
-  line-height: 64px;
-
-  span {
-    padding-top: 15px;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 19px;
-    letter-spacing: 1.4px;
-    margin-bottom: 30px;
-    display: block;
-  }
-
-}
-
-.header__search {
-  padding-top: 15px;
-  padding-bottom: 35px;
-}
-
-.header__location {
-  display: inline-block;
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 1.05px;
-  position: relative;
-  padding-left: 19px;
-  text-transform: uppercase;
-
-  &::before {
-    content: '';
-    position: absolute;
-    width: 11px;
-    height: 13px;
-    background-image: url(../img/marker.svg);
-    left: 0;
-    top: 0;
-  }
-
-}
-
-.header__map {
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 3;
-}
-
-.header__arrows {
-  position: absolute;
-  left: 210px;
-  bottom: 30px;
-  z-index: 3;
-}
-
-.line-animation {
-  stroke-dashoffset: 600;
-  stroke-dasharray: 600;
-  animation: animdash 3s infinite 6s
-}
-
-@keyframes animdash {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
+/* --------- Surf --------- */
 .surf {
   background-image: url(../img/surf-bg.png);
   background-position: right 200px;
@@ -245,7 +255,199 @@
 .surf__subtitle {
   text-align: right;
   padding-right: 80px;
-  // margin-bottom: -86px;
+}
+
+.slider-map {
+  max-width: 1200px;
+  min-height: 635px;
+  background-image: url(../img/world-map-dots.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+
+  .slick-list {
+    min-height: 635px;
+    overflow: visible;
+  }
+
+  .slick-current {
+
+    .slider-dots__content {
+      display: block;
+      width: 285px;
+      padding: 28px 31px 0 32px;
+    }
+
+  }
+
+}
+
+.slider-dots {
+  position: relative;
+}
+
+.slider-dots--1 {
+  top: 335px;
+  left: 0;
+
+  .slider-dots__content {
+    transform: translateX(0);
+    &::before {
+      left: -0.5px;
+    }
+  }
+
+}
+
+.slider-dots--2 {
+  top: 270px;
+  left: 0;
+
+  .slider-dots__circle {
+    position: relative;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      background-image: url(../img/mini-marker.png);
+      width: 14px;
+      height: 17px;
+      background-size: cover;
+      right: -25px;
+      top: -15px;
+    }
+
+  }
+
+}
+
+.slider-dots--3 {
+  top: 330px;
+  left: 25px;
+}
+
+.slider-dots--4 {
+  top: 470px;
+  left: -25px;
+}
+
+.slider-dots--5 {
+  top: 230px;
+  left: -65px;
+}
+
+.slider-dots--6 {
+  top: 550px;
+  left: -120px;
+}
+
+.slider-dots--7 {
+  top: 375px;
+  left: -95px;
+}
+
+.slider-dots--8 {
+  top: 470px;
+  left: 35px;
+
+  .slider-dots__content {
+    transform: translateX(-262px);
+    &::before {
+      left: auto;
+      right: -0.5px;
+    }
+  }
+
+}
+
+.slider-dots__circle {
+  width: 23px;
+  height: 23px;
+  background-color: $green;
+  border-radius: 50%;
+  box-shadow: 0px 0px 35px rgba(74, 246, 205, 0.837777);
+}
+
+.slider-dots__content {
+  display: none;
+  background: rgba(#0f1010, .7);
+  border-radius: 6px;
+  position: absolute;
+  bottom: 35px;
+  transform: translateX(-50%);
+  z-index: 1;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-bottom: 20px solid $green;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    bottom: -21px;
+    left: 50%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+}
+
+.slider-dots__content-row {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 30px;
+}
+
+.slider-dots__content-title {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 26px;
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-color: $green;
+    width: 80px;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+  }
+
+}
+
+.slider-dots__content-subtitle {
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: capitalize;
+}
+
+.slider-dots__content-link {
+  padding-top: 2px;
+}
+
+.slider-dots__content-item {
+  text-align: center;
+
+  img {
+    margin-bottom: 7px;
+    display: inline-block;
+  }
+
+}
+
+.slider-dots__content-number {
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 23px;
+}
+
+.slider-dots__content-name {
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 12px;
 }
 
 .surf-slider {
@@ -342,206 +544,15 @@
   display: none;
 }
 
-.slider-map {
-  max-width: 1200px;
-  min-height: 635px;
-  background-image: url(../img/world-map-dots.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0 auto;
-
-  .slick-list {
-    min-height: 635px;
-    overflow: visible;
-  }
-
-  .slick-current {
-
-    .slider-dots__content {
-      display: block;
-      width: 285px;
-      padding: 28px 31px 0 32px;
-    }
-
-  }
-
-}
-
-.slider-dots__content-row {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 30px;
-}
-
-.slider-dots__content-item {
-  text-align: center;
-
-  img {
-    margin-bottom: 7px;
-  }
-
-}
-
-.slider-dots__content-number {
-  font-weight: 800;
-  font-size: 16px;
-  line-height: 23px;
-}
-
-.slider-dots__content-name {
-  font-weight: 300;
-  font-size: 10px;
-  line-height: 12px;
-}
-
-.slider-dots__content-title {
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 26px;
-  padding-bottom: 8px;
-  margin-bottom: 8px;
-  position: relative;
-
-  &::before {
-    content: '';
-    position: absolute;
-    background-color: $green;
-    width: 80px;
-    height: 1px;
-    bottom: 0;
-    left: 0;
-  }
-
-}
-
-.slider-dots__content-subtitle {
-  font-size: 16px;
-  line-height: 19px;
-  text-transform: capitalize;
-}
-
-.slider-dots__content-link {
-  padding-top: 4px;
-}
-
-.slider-dots__circle {
-  width: 23px;
-  height: 23px;
-  background-color: $green;
-  border-radius: 50%;
-  box-shadow: 0px 0px 35px rgba(74, 246, 205, 0.837777);
-}
-
-.slider-dots__content {
-  display: none;
-  background: rgba(#0f1010, .7);
-  border-radius: 6px;
-  position: absolute;
-  bottom: 35px;
-  transform: translateX(-50%);
-  z-index: 1;
-  &::before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-bottom: 20px solid $green;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
-    bottom: -21px;
-    left: calc(50% - 1px);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-}
-
-.slider-dots {
-  position: relative;
-}
-
-.slider-dots--1 {
-  top: 335px;
-  left: 0;
-
-  .slider-dots__content {
-    transform: translateX(0);
-    &::before {
-      left: -0.5px;
-    }
-  }
-
-}
-
-.slider-dots--2 {
-  top: 270px;
-  left: 0;
-
-  .slider-dots__circle {
-    position: relative;
-    
-    &::before {
-      content: '';
-      position: absolute;
-      background-image: url(../img/mini-marker.png);
-      width: 14px;
-      height: 17px;
-      background-size: cover;
-      right: -25px;
-      top: -15px;
-    }
-
-  }
-
-
-}
-
-.slider-dots--3 {
-  top: 330px;
-  left: 25px;
-}
-
-.slider-dots--4 {
-  top: 470px;
-  left: -25px;
-}
-
-.slider-dots--5 {
-  top: 230px;
-  left: -65px;
-}
-
-.slider-dots--6 {
-  top: 550px;
-  left: -120px;
-}
-
-.slider-dots--7 {
-  top: 375px;
-  left: -95px;
-}
-
-.slider-dots--8 {
-  top: 470px;
-  left: 35px;
-
-  .slider-dots__content {
-    transform: translateX(-262px);
-    &::before {
-      left: auto;
-      right: -0.5px;
-    }
-  }
-
-}
-
+/* --------- Holder --------- */
 .holder {
   background-image: url('../img/travel-bg.png');
+  background-position: bottom right;
+  background-repeat: no-repeat;
+
   &.sleep {
     background-image: url('../img/frangipani.png');
   }
-  background-position: bottom right;
-  background-repeat: no-repeat;
 
   .slider-arrows {
     top: 225px;
@@ -644,6 +655,7 @@
 
 }
 
+/* --------- Shop --------- */
 .shop {
   background-image: url(../img/shop-bg.png);
   background-repeat: no-repeat;
@@ -673,10 +685,6 @@
   margin-bottom: 47px;
 }
 
-.shop__star-list {
-  margin-left: -9px;
-}
-
 .shop__slider-price {
   font-weight: 800;
   font-size: 32px;
@@ -688,52 +696,14 @@
   }
 }
 
+.shop__star-list {
+  margin-left: -9px;
+}
+
 .shop__slider-content {
   padding-left: 170px;
   display: flex;
   align-items: flex-end;
-}
-
-.shop__extras {
-  padding-left: 150px;
-}
-
-.shop__extras-inner {
-  display: flex;
-}
-
-.shop__extras-title {
-  font-weight: 800;
-  font-size: 28px;
-  line-height: 40px;
-  margin-bottom: 25px;
-}
-
-.shop__extras-box {
-  text-align: center;
-  margin-right: 57px;
-}
-
-.shop__extras-img {
-  min-height: 105px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 35px;
-}
-
-.shop__extras-name {
-  font-size: 18px;
-  line-height: 22px;
-  opacity: 0.5;
-  letter-spacing: 8px;
-  margin-bottom: 16px;
-}
-
-.shop__extras-price {
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 40px;
 }
 
 .surfboard {
@@ -775,7 +745,7 @@
     }
 
   }
-} 
+}
 
 .surfboard-box__circle {
   width: 20px;
@@ -806,10 +776,6 @@
   }
 }
 
-.surfboard-box__circle.active + .surfboard-box__content {
-  display: block;
-}
-
 .surfboard-box__content {
   display: none;
   position: absolute;
@@ -833,6 +799,53 @@
 
 }
 
+.surfboard-box__circle.active + .surfboard-box__content {
+  display: block;
+}
+
+.shop__extras {
+  padding-left: 150px;
+}
+
+.shop__extras-title {
+  font-weight: 800;
+  font-size: 28px;
+  line-height: 40px;
+  margin-bottom: 25px;
+}
+
+.shop__extras-inner {
+  display: flex;
+}
+
+.shop__extras-box {
+  text-align: center;
+  margin-right: 57px;
+}
+
+.shop__extras-img {
+  min-height: 105px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 35px;
+}
+
+.shop__extras-name {
+  font-size: 18px;
+  line-height: 22px;
+  opacity: 0.5;
+  letter-spacing: 8px;
+  margin-bottom: 16px;
+}
+
+.shop__extras-price {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 40px;
+}
+
+/* --------- Footer --------- */
 .footer {
   text-align: center;
   padding: 285px 0 34px;
@@ -855,7 +868,5 @@
   opacity: 0.5;
 }
 
-
-
-
+/* --------- Import Media --------- */
 @import 'media';
