--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -257,6 +257,7 @@
   padding-right: 80px;
 }
 
+// Slider Map
 .slider-map {
   max-width: 1200px;
   min-height: 635px;
@@ -450,6 +451,7 @@
   line-height: 12px;
 }
 
+// Surf Slider
 .surf-slider {
   padding-top: 110px;
 
@@ -560,6 +562,7 @@
   }
 }
 
+// Holder Slider
 .holder-slider {
   &__head {
     background-repeat: no-repeat;
@@ -665,6 +668,7 @@
   }
 }
 
+// Shop Slider
 .shop__slider {
   padding-left: 132px;
 }
@@ -706,6 +710,7 @@
   align-items: flex-end;
 }
 
+// Surfboard
 .surfboard {
   position: relative;
 }
@@ -803,6 +808,7 @@
   display: block;
 }
 
+// Shop Extras
 .shop__extras {
   padding-left: 150px;
 }
